findBugs - check null